--- a/vue_project/package.json
+++ b/vue_project/package.json
@@ -15,7 +15,10 @@
     "px2rem-loader": "^0.1.9",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "swiper": "^5.3.8",
+    "vant": "^2.8.1",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
   },
